Production ready: Added accessibility, SEO, and performance enhancements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sarahs-library</title>
+    <meta name="description" content="Browse Sarah's personal book collection and get AI-powered recommendations. For the ❤️ of reading.">
+    <meta property="og:title" content="Sarah's Books">
+    <meta property="og:description" content="A curated collection of books with AI-powered recommendations. For the ❤️ of reading.">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Sarah's Books">
+    <meta name="twitter:description" content="A curated collection of books with AI-powered recommendations.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Crimson+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <title>Sarah's Books</title>
   </head>
   <body>
     <div id="root"></div>
