feat: add social media thumbnail and update Our Mission page
Social Media Thumbnail:
- Converted favicon.svg to og-image.png (1200×630px)
- Added Open Graph and Twitter Card meta tags
- Changed Twitter card to 'summary_large_image' for better display
- Book stack icon on cream background

Our Mission Page:
- Updated mission statement: 'To encourage a love of reading and support the local ecosystems that make it possible.'
- Renamed 'Your Choices Matter' section to 'Shop Local'
- Changed to left-justified text (was centered)
- Removed white background and border (now transparent)

Documentation:
- Created Canva design brief for social thumbnails
- Created social media thumbnail specification guide

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
     <meta property="og:title" content="Sarah's Books">
     <meta property="og:description" content="A curated collection of books with AI-powered recommendations. For the ❤️ of reading.">
     <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary">
+    <meta property="og:image" content="https://www.sarahsbooks.com/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:alt" content="Sarah's Books - An open book with a heart">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Sarah's Books">
     <meta name="twitter:description" content="A curated collection of books with AI-powered recommendations.">
+    <meta name="twitter:image" content="https://www.sarahsbooks.com/og-image.png">
+    <meta name="twitter:image:alt" content="Sarah's Books - For the love of reading">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Crimson+Pro:wght@400;500;600;700&display=swap" rel="stylesheet">
