feat: add Termly cookie consent banner
- Added Termly resource blocker script to index.html
- autoBlock=on ensures cookies are blocked until consent

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <!-- Termly Cookie Consent Banner -->
+    <script src="https://app.termly.io/resource-blocker/54f19761-4391-433d-8c4f-a7127e19050f?autoBlock=on"></script>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Browse Sarah's personal book collection and get AI-powered recommendations. For the ❤️ of reading.">
