--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <!-- Termly Cookie Consent Banner -->
     <script src="https://app.termly.io/resource-blocker/54f19761-4391-433d-8c4f-a7127e19050f?autoBlock=on"></script>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y1LG6YHEPC"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-Y1LG6YHEPC');
+    </script>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Browse Sarah's personal book collection and get AI-powered recommendations. For the ❤️ of reading.">
