Update Google Analytics to new property G-WTK5C80YC1
- Replace old measurement ID in index.html
- Update docs with new ID and account info

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <!-- Termly Cookie Consent Banner -->
     <script src="https://app.termly.io/resource-blocker/54f19761-4391-433d-8c4f-a7127e19050f?autoBlock=on"></script>
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y1LG6YHEPC"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WTK5C80YC1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-Y1LG6YHEPC');
+      gtag('config', 'G-WTK5C80YC1');
     </script>
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
